# tsdb2

./: .dockerignore  .gitignore  .nextest.toml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml  docker-bake.hcl  idea.md  kimi-rocksdb.md  kimi-rocksdb2.md  plan.md  rustfmt.toml  write_files.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
configs/: balanced.ini  default.ini  high-compression.ini  high_performance.ini  low-cost.ini  low_memory.ini  read-heavy.ini  write-heavy.ini
crates/tsdb-admin/: Cargo.toml
crates/tsdb-admin/src/: config_api.rs  error.rs  gateway.rs  iceberg_api.rs  lib.rs  lifecycle_api.rs  metrics_api.rs  parquet_api.rs  protocol.rs  server.rs  service_api.rs  sql_api.rs  test_api.rs  utils.rs
crates/tsdb-arrow/: Cargo.toml
crates/tsdb-arrow/src/: converter.rs  engine.rs  error.rs  lib.rs  memory.rs  schema.rs
crates/tsdb-bench/: Cargo.toml
crates/tsdb-bench/benches/: convert_bench.rs  read_bench.rs  sql_bench.rs  write_bench.rs
crates/tsdb-cli/: Cargo.toml
crates/tsdb-cli/src/: main.rs  server_main.rs
crates/tsdb-cli/tests/: cli_tests.rs
crates/tsdb-datafusion/: Cargo.toml
crates/tsdb-datafusion/src/: engine.rs  error.rs  lib.rs  predicate.rs  schema.rs  table_provider.rs  udf.rs
crates/tsdb-flight/: Cargo.toml
crates/tsdb-flight/src/: error.rs  lib.rs  server.rs  server_tests.rs
crates/tsdb-iceberg/: Cargo.toml
crates/tsdb-iceberg/src/: catalog.rs  commit.rs  error.rs  lib.rs  manifest.rs  partition.rs  scan.rs  schema.rs  snapshot.rs  stats.rs  table.rs  table_provider.rs  util.rs
crates/tsdb-integration-tests/: Cargo.toml
crates/tsdb-integration-tests/src/: business_apm.rs  business_finance.rs  business_iot.rs  dual_engine_e2e.rs  end_to_end.rs  flight_e2e.rs  iceberg_e2e.rs  lib.rs  rocksdb_e2e.rs
crates/tsdb-parquet/: Cargo.toml
crates/tsdb-parquet/src/: compaction.rs  encoding.rs  error.rs  file_stats.rs  lib.rs  manifest.rs  partition.rs  pruning.rs  reader.rs  wal.rs  writer.rs
crates/tsdb-rocksdb/: Cargo.toml
crates/tsdb-rocksdb/src/: archiver.rs  arrow_adapter.rs  cleanup.rs  compaction_filter.rs  comparator.rs  config.rs  cpu_features.rs  db.rs  error.rs  key.rs  last_cache.rs  lib.rs  merge.rs  snapshot.rs  tags.rs  value.rs
crates/tsdb-storage-arrow/: Cargo.toml
crates/tsdb-storage-arrow/src/: buffer.rs  config.rs  engine.rs  error.rs  lib.rs
crates/tsdb-stress/: Cargo.toml
crates/tsdb-stress-rocksdb/: Cargo.toml
crates/tsdb-stress-rocksdb/src/: concurrent_stress.rs  lib.rs  read_stress.rs  recovery_stress.rs  stability_stress.rs  ttl_stress.rs  write_stress.rs
crates/tsdb-stress/src/: compaction_stress.rs  concurrent_stress.rs  lib.rs  read_stress.rs  wal_stress.rs  write_stress.rs
crates/tsdb-test-utils/: Cargo.toml
crates/tsdb-test-utils/src/: assertions.rs  data_gen.rs  lib.rs
data/: IDENTITY  LOG  LOG.old.1776450910371347  MANIFEST-000009  OPTIONS-000013  OPTIONS-000015
docs/: architecture.md  data-lifecycle.md  data-structures.md  key-technologies.md  test-report.md  user-guide.md
scripts/: build.sh  check.sh  db-info.py  dev.sh  start.sh  test-data.py
spec/: checklist.md  spec.md  tasks.md
tsdb-dashboard/: electron.js  index.html  package-lock.json  package.json  vite.config.ts
tsdb-dashboard/src/: App.tsx  api.ts  index.css  utils.ts
tsdb-dashboard/src/components/: MainLayout.tsx
tsdb-dashboard/src/pages/: Configs.tsx  Dashboard.tsx  DataLifecycle.tsx  DataQuery.tsx  IcebergManager.tsx  Monitoring.tsx  ParquetViewer.tsx  RocksdbStats.tsx  Services.tsx  SqlConsole.tsx  Testing.tsx
