[workspace]
resolver = "2"
members = [
    "crates/tsdb-arrow",
    "crates/tsdb-parquet",
    "crates/tsdb-datafusion",
    "crates/tsdb-storage-arrow",
    "crates/tsdb-flight",
    "crates/tsdb-integration-tests",
    "crates/tsdb-test-utils",
    "crates/tsdb-stress",
    "crates/tsdb-bench",
    "crates/tsdb-rocksdb",
    "crates/tsdb-stress-rocksdb",
    "crates/tsdb-cli",
    "crates/tsdb-iceberg",
    "crates/tsdb-admin",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tsdb-arrow = { path = "crates/tsdb-arrow" }
tsdb-parquet = { path = "crates/tsdb-parquet" }
tsdb-datafusion = { path = "crates/tsdb-datafusion" }
tsdb-storage-arrow = { path = "crates/tsdb-storage-arrow" }
tsdb-test-utils = { path = "crates/tsdb-test-utils" }

arrow = "54"
arrow-ipc = "54"
parquet = "54"
datafusion = "53"
arrow-flight = "54"
tonic = "0.12"
prost = "0.13"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
crc32fast = "1"
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
rocksdb = { version = "0.24", features = ["multi-threaded-cf"] }
fxhash = "0.2"
tsdb-rocksdb = { path = "crates/tsdb-rocksdb" }
tsdb-iceberg = { path = "crates/tsdb-iceberg" }
tsdb-admin = { path = "crates/tsdb-admin" }
tsdb-flight = { path = "crates/tsdb-flight" }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
