[package]
name = "tsdb-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tsdb-arrow = { workspace = true }
tsdb-rocksdb = { workspace = true }
tsdb-iceberg = { workspace = true }
tsdb-datafusion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
datafusion = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
nng = "1"
sys-info = "0.9"
rocksdb = { workspace = true }
libc = "0.2"
which = "6"
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
