[package]
name = "tsdb-arrow"
version.workspace = true
edition.workspace = true

[dependencies]
arrow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
