[package]
name = "tsdb-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tsdb-cli"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2"
predicates = "3"

[dependencies]
tsdb-arrow = { workspace = true }
tsdb-rocksdb = { workspace = true }
tsdb-storage-arrow = { workspace = true }
tsdb-datafusion = { workspace = true }
tsdb-iceberg = { workspace = true }
tsdb-admin = { workspace = true }
tsdb-flight = { workspace = true }
axum = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = "1"
csv = "1"
datafusion = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
tonic = { workspace = true }
