[package]
name = "tsdb-datafusion"
version.workspace = true
edition.workspace = true

[dependencies]
tsdb-arrow = { workspace = true }
tsdb-parquet = { workspace = true }
arrow = { workspace = true }
datafusion = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
