[package]
name = "tsdb-integration-tests"
version.workspace = true
edition.workspace = true

[dependencies]
tsdb-arrow = { workspace = true }
tsdb-parquet = { workspace = true }
tsdb-datafusion = { workspace = true }
tsdb-storage-arrow = { workspace = true }
tsdb-rocksdb = { workspace = true }
rocksdb = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
datafusion = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
