[package]
name = "tsdb-integration-tests"
version.workspace = true
edition.workspace = true

[dependencies]
tsdb-arrow = { workspace = true }
tsdb-parquet = { workspace = true }
tsdb-datafusion = { workspace = true }
tsdb-storage-arrow = { workspace = true }
tsdb-rocksdb = { workspace = true }
tsdb-iceberg = { workspace = true }
tsdb-flight = { path = "../tsdb-flight" }
rocksdb = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
parquet = { workspace = true }
datafusion = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
