[package]
name = "tsdb-parquet"
version.workspace = true
edition.workspace = true

[dependencies]
tsdb-arrow = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crc32fast = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
